# SmallVCM

./: CMakeLists.txt  Makefile  Makefile.osx
src/: config.hxx  eyelight.hxx  platform.hxx.in  smallvcm.cxx
